# backend-onboard-youngbin

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: settings.py  urls.py
authentication/: urls.py
authentication/domain/: auth_service.py
authentication/exception/: auth_already_exist_exception.py  auth_authentication_exception.py  auth_invalid_email_exception.py  auth_invalid_password_exception.py
authentication/infrastructure/: custom_jwt_authentication.py  redis_token_storage.py
authentication/presentation/: auth_viewset.py
common/: exception_handler.py  fields.py  swagger_utils.py  views.py
common/exception/: ably_api_exception.py  invalid_request_exception.py
member/: apps.py  models.py  urls.py
member/domain/: member_repository.py  member_service.py
member/exception/: member_already_exist.py  member_authentication.py  member_invalid_email.py  member_invalid_password.py  member_not_found.py
member/migrations/: 0001_initial.py
member/model/: member.py
member/presentation/: member_viewset.py
product/: models.py
product/domain/: product_repository.py
product/exception/: product_not_found.py
product/migrations/: 0001_initial.py
product/model/: product.py
tests/: conftest.py
wish_item/: apps.py  models.py  urls.py
wish_item/domain/: wish_item_repository.py  wish_item_service.py
wish_item/exception/: wish_item_already_exist.py  wish_item_box_required.py  wish_item_not_found.py
wish_item/migrations/: 0001_initial.py  (+2 more)
wish_item_box/: apps.py  urls.py
(+28 files in other folders)
